<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">COC</string>
    <string name="action_settings">Settings</string>
    <string name="side_menu_logout">Logout</string>
    <string name="side_menu_dashboard">Dashboard</string>
    <string name="side_menu_account">Account</string>
    <string name="side_menu_about">About</string>
    <string name="side_menu_help">Help</string>
    <string name="side_menu_signout">Sign Out</string>
    <string name="side_menu_my_account">My Account</string>
    <string name="side_menu_add_user">Add New User</string>
    <string name="side_menu_manage_user">Manage User</string>
    <string name="side_menu_device_setup">Device Set-up</string>
    <string name="side_menu_settings">Setting</string>
    <string name="side_menu_version">Version</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="subscription_over">Seems like your subscription is finished. Please Renew your subscription to continue.</string>
    <string name="actofitScale_retest">Retest</string>
    <string name="side_menu_account_title">My Account</string>
    <string name="side_menu_account_title_guest">&quot;Guest\'s account&quot;</string>
    <string name="side_menu_reminder">Reminder</string>
    <string name="side_menu_goal_value">Goal Value Setting</string>
    <string name="side_menu_message_signout">Are you sure you want to Sign Out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="image">Image</string>
    <string name="app_id">457446357723571</string>
    <string name="splash_data_new"><b>Precision Measurement Solutions For</b> \n Medical and Weighing Track your Blood Pressure,\n pulse and weight readings</string>
    <string name="disclaimer_terms_condition">Terms &amp; Privacy</string>
    <string name="alert_do_not_agree">Do You Really Want to Exit out of Application?</string>
    <string name="alert_title">AND Medical</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="text_yes">yes</string>
    <string name="text_no">no</string>
    <string name="text_button_done">Done</string>
    <string name="waiting">waiting</string>
    <string name="finish">finish</string>
    <string name="retry">retry</string>
    <string name="failed">Failed</string>
    <string name="username">abc@xyz.com</string>
    <string name="username1">Username</string>
    <string name="hint">&#8230;&#8230;&#8230;.</string>
    <string name="password">Password</string>
    <string name="remember">Continue as Guest</string>
    <string name="sign">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_as_guest">Create Account</string>
    <string name="terms">Terms and Conditions</string>
    <string name="signup">By using, I agree to the</string>
    <string name="aleady_filled">already Filled</string>
    <string name="login_qot">PLEASE SIGN IN TO YOUR ACCOUNT</string>
    <string name="text_login_continue">Start Test</string>
    <string name="login">Logging in�.</string>
    <string name="hint_enter_email">Enter email here&#8230;</string>
    <string name="text_get_password">Get Password</string>
    <string name="please_enter"> Please enter your email ID:</string>
    <string name="dialog_info">Info</string>
    <string name="dialog_deleting">Deleting.</string>
    <string name="dialog_enter_email_id">Please enter emailid.</string>
    <string name="dialog_enter_email_valid">Please enter a valid email address</string>
    <string name="dialog_no_internet_connect">No Internet Connection</string>
    <string name="dialog_enter_email_address">Please enter your email address.</string>
    <string name="dialog_enter_password">Please enter your password.</string>
    <string name="dialog_progress_wait">Please wait.</string>
    <string name="dialog_progress_login">Logging in.</string>
    <string name="dialog_no_data">No Data Available</string>
    <string name="dialog_fail_login">Unable to Login! Please Try After Sometime</string>
    <string name="dialog_enter_email_and_password">Please enter valid emailid and password</string>
    <string name="device_set_up">Device Setup</string>
    <string name="personal_settings">Settings</string>
    <string name="tutorial_help">Tutorial/Help</string>
    <string name="sharing">Sharing/Social</string>
    <string name="addnew">Add New User</string>
    <string name="manage">Manage User</string>
    <string name="createaccnt">Create Account</string>
    <string name="height_prompt">Height</string>
    <string name="weight_prompt">Weight</string>
    <string name="dob">Date of Birth</string>
    <string name="date">2014/04/10</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="text_metric">Metric</string>
    <string name="text_guest">Guest</string>
    <string name="height_unit_metric">cm</string>
    <string name="height_unit_us">in</string>
    <string name="text_feet">feet</string>
    <string name="text_inch">inch</string>
    <string name="sex_male">MALE</string>
    <string name="sex_female">FEMALE</string>
    <string-array name="gender_array">
        <item>@string/text_male</item>
        <item>@string/text_female</item>
    </string-array>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="emailaddress">Email Address</string>
    <string name="confirm">Confirm Password</string>
    <string name="metric">Metric</string>
    <string name="us">US</string>
    <string name="continue1"><u>Continue as Guest</u></string>
    <string name="set_goals">Set Goals</string>
    <string name="set_health_vault"><b>Manage Your Microsoft HealthVault Record</b> Click the blue icon to view health data in your HealthVault record.</string>
    <string name="set_gravitational_acceleration">Change Gravitational acceleration</string>
    <string name="pairing_weightscale">Please scale to pairing mode.</string>
    <string name="finish_set_acceleration_gravity">Complete to setting.</string>
    <string name="fail_set_acceleration_gravity">Failed to setting. Please retry.</string>
    <string name="dialog_title_paring_complete">Complete&#8230;!</string>
    <string name="dialog_message_paring_complete">The device is successfully paired.\n press OK to continue..</string>
    <string name="dialog_message_pairing_complete_uw302">The device is successfully paired.\n\n To sync tracker, please tap sync icon in dashboard.</string>
    <string name="header_reminder">Set Reminders</string>
    <string name="header_add_reminder">Add Reminder</string>
    <string name="header_sounds">Sounds</string>
    <string name="header_notes">Notes</string>
    <string name="text_save">Save</string>
    <string name="text_repeat">Repeat</string>
    <string name="text_never">Never</string>
    <string name="text_label">Notes</string>
    <string name="text_alarm">Alarm</string>
    <string name="text_sound">Sound</string>
    <string name="text_sound_label">Notes</string>
    <string name="text_snooze">Snooze</string>
    <string name="text_add">Add</string>
    <string name="hint_add_note">Add Note&#8230;..</string>
    <string name="text_everyday">Everyday</string>
    <string-array name="every_day">
        <item>@string/text_every_sunday</item>
        <item>@string/text_every_monday</item>
        <item>@string/text_every_tuesday</item>
        <item>@string/text_every_wednesday</item>
        <item>@string/text_every_thursday</item>
        <item>@string/text_every_friday</item>
        <item>@string/text_every_saturday</item>
    </string-array>
    <string name="text_every_sunday">Every Sunday</string>
    <string name="text_every_monday">Every Monday</string>
    <string name="text_every_tuesday">Every Tuesday</string>
    <string name="text_every_wednesday">Every Wednesday</string>
    <string name="text_every_thursday">Every Thursday</string>
    <string name="text_every_friday">Every Friday</string>
    <string name="text_every_saturday">Every Saturday</string>
    <string-array name="reminder_label_static">
        <item>Take a Walk Today</item>
        <item>Take my Blood Pressure</item>
        <item>Weight Myself</item>
        <item>Get a Good Night\'s Sleep</item>
    </string-array>
    <string name="text_title_steps">Steps</string>
    <string name="text_steps_per_day">Steps Per Day</string>
    <string name="hint_enter_value">Please Enter Value</string>
    <string name="text_title_distance">Distance</string>
    <string name="text_kilometer">Kilometer</string>
    <string name="text_title_weight">Weight</string>
    <string name="text_kilogram">Kilogram</string>
    <string name="text_unit_kilogram">Kilogram(Kg)</string>
    <string name="text_unit_pounds">Pounds(Lb)</string>
    <string name="text_unit_miles_per_day">Miles per day</string>
    <string name="text_unit_kilometer_per_day">Kilometer(Km)per day</string>
    <string name="info_steps_input_range">Input range is 500 &#8211; 99999</string>
    <string name="info_weight_input_range_kg">Input range is 1.0 &#8211; 999.0</string>
    <string name="info_weight_input_range_lb">Input range is 2.205 &#8211; 2202.38</string>
    <string name="info_distance_input_range_km">Input range is 1.0 &#8211; 1000.0</string>
    <string name="info_distance_input_range_mile">Input range is 0.1 &#8211; 621.0</string>
    <string name="text_age">Age</string>
    <string name="text_age_1">Age :</string>
    <string name="text_age_2">Age: </string>
    <string name="text_title_manage_account">Manage Account</string>
    <string name="text_delete_account">Delete Account</string>
    <string name="update">Update</string>
    <string name="info_enter_firstname">Please Enter Valid FirstName</string>
    <string name="info_length_firstname">Firstname must be  be at least 2 characters long</string>
    <string name="info_enter_lastname">Please Enter Valid LastName</string>
    <string name="info_enter_email_id">Please Enter Email Id</string>
    <string name="info_length_lastname">Lastname must be  be at least 2 characters long</string>
    <string name="info_enter_valid_email_id">Please Enter Valid Email Id</string>
    <string name="info_enter_password">Please Enter Password</string>
    <string name="info_minimum_length_and_captal_password">Password must be at least 7 characters long with at least 1 capital letter and at least 1 number</string>
    <string name="info_minimum_length_password">Password must be at least 7 characters long</string>
    <string name="info_empty_capital_password">Password must has at least 1 capital letter</string>
    <string name="info_empty_number_password">Password must has at least 1 number</string>
    <string name="info_empty_capital_number_password">Password must has at least 1 capital letter and 1 number</string>
    <string name="info_confirm_password">Please Confirm Password</string>
    <string name="info_not_match_password">Password did not match</string>
    <string name="info_enter_date_of_birth">Please Enter Date Of Birth</string>
    <string name="paring_message_notice">Ensure Bluetooth is turned on for your device.</string>
    <string name="pairing_instruction_two">Tap</string>
    <string name="pairing_instruction_one">Slowly but firmly swipe from right to left to reach the setting icon</string>
    <string name="actMain_link_device_info_title">Selected Device :</string>
    <string name="actMain_device_info">%1$s</string>
    <string name="actMain_btn_pair">Pair</string>
    <string name="actMain_btn_comm">Connect</string>
    <string name="protocol">General Protocol</string>
    <string name="escprotocol">Esc Sequence Protocol</string>
    <string name="btn_display">Continue</string>
</resources>