<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000" >
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        
        <RelativeLayout
            android:id="@+id/textbox_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="20dp"
            >
            
            <!--  幅用 Invisibleで運用 -->
            <ImageView
                android:id="@+id/weightscale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/weightscale"
                android:layout_alignTop="@+id/weightscale"
                android:layout_alignRight="@+id/weightscale"
                android:layout_alignBottom="@+id/weightscale"
                android:orientation="vertical" >
                
                <TextView 
                    android:id="@+id/dialog_title_textview"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:text="@string/dialog_title_paring_complete"
                    android:textStyle="bold"
                    android:textColor="@color/app_theme_color"
                    android:gravity="center"
                    android:textSize="23sp"
                />
                
                <TextView 
                    android:id="@+id/dialog_message_textview"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:layout_below="@+id/dialog_title_textview"
                    android:text="@string/dialog_message_paring_complete"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textSize="20sp"
                />
                
            </LinearLayout>
            
	    </RelativeLayout>
	
	    <TextView
	        android:id="@+id/positive_button_textview"
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:background="@color/app_theme_color"
	        android:gravity="center"
	        android:text="@string/ok"
	        android:textStyle="bold"
	        android:textColor="@android:color/white"
	        android:textSize="20sp" />
        
    </LinearLayout>
    
</RelativeLayout>
