<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/homelay1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:layout_weight="0.1"
            android:src="@mipmap/applogo" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.4">
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right"
            android:layout_weight="0.5">
            <Button
                android:id="@+id/btIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:visibility="gone"
                android:background="@drawable/btnbluetooth" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/homelay3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homelay1"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/btbannerlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Connect To Printer"
                android:textColor="@color/white"
                android:textSize="30sp"/>

            <LinearLayout
                android:id="@+id/scanBTLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="visible"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/lay21"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/btnScanbt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btnbluetooth" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lay1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tvScanbt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="50dp"
                        android:text="Scan BT Devices"
                        android:textSize="25sp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#ffffff"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homelay3"
        android:fadingEdge="vertical"
        android:scrollbars="vertical"
        android:visibility="visible">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:src="@drawable/printer"
                    android:layout_margin="50dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginTop="150dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/actMain_ll_device_ctrl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/actMain_link_device_info_title"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white"
                        android:textSize="30sp"/>

                    <TextView
                        android:id="@+id/actMain_tv_device_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dip"
                        android:textSize="30sp"
                        android:text="@string/actMain_device_info"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/actMain_ll_pair_or_comm"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/actMain_btn_pair"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/btnprint_back"
                        android:onClick="onClickBtnPair"
                        android:text="@string/actMain_btn_pair"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/actMain_btn_conn"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btnprint_back"
                        android:onClick="onClickBtnConn"
                        android:text="@string/actMain_btn_comm"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <ScrollView
        android:id="@+id/redioscroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/homelay2"
        android:layout_below="@+id/scroll"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/white"
                    android:orientation="vertical" >
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btbannerlay1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/imageView3"
                        android:text="Select Protocol"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/radiogrp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="22dp" >

                    <RadioButton
                        android:id="@+id/radioprotocol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/protocol"
                        android:visibility="gone"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/radioesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/escprotocol"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:visibility="gone"
                        android:textStyle="bold" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/btnDisplay"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btnprint_back"
                        android:text="@string/btn_display"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/homelay2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/botlay1"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/back_but"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:background="@drawable/back_but12" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/botlay2"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnInfo"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/inf_but" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/botlay3"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnHelp"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/help_but1" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>